# tinysock

./: .gitignore  CMakeLists.txt
include/simpw/: Socket.h  SocketAddress.h  SocketApi.h  SocketFactory.h
src/: Socket.cpp  SocketAddress.cpp  SocketApi.cpp  main.cpp
tests/: CMakeLists.txt  SocketAddressTest.cpp  SocketFactoryMock.h  SocketTest.cpp
