CMAKE_MINIMUM_REQUIRED (VERSION 3.20)
PROJECT (simpw)

OPTION (BUILD_TESTS OFF)

SET (CMAKE_CXX_STANDARD 20)

SET (SOURCES
        ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp
    )

SET (HEADERS
    )

ADD_EXECUTABLE (${PROJECT_NAME} ${SOURCES} ${HEADERS})

IF (BUILD_TESTS)
    ENABLE_TESTING()
    ADD_SUBDIRECTORY (tests)
ENDIF ()
